# editalshield

./: .dockerignore  .docsync.json  .env.docker  .env.example  .flake8  .gitignore  ARTICLE_DRAFT.md  BLUEPRINT_HANDOUT.md  CHANGELOG.md  CONTRIBUTING.md  DOCSYNC_INTEGRATION_COMPLETE.md  Dockerfile  EAP.md  GITHUB_METADATA.txt  GITHUB_PUBLISH_GUIDE.md  IMAGES_GUIDE.md  LICENSE  MATHEMATICAL_MODEL.md  MCP_INTEGRATION.md  MIGRATION_CHECKLIST.md  Makefile  PROJECT_STATUS.md  README.md  SESSION.md  SETUP_COMPLETE.md  START_HERE.md  app.py  docker-compose.yml  docsync.yml  generate_animation.py  install_log.txt  mcp.json  mcp_server.py  migrate-to-symbeon.ps1  pyproject.toml  requirements.txt  structure_snapshot.txt
.github/ISSUE_TEMPLATE/: sprint_task.md
.github/workflows/: ci.yml  lint.yml  tests.yml
cli/: __init__.py  editalshield_cli.py
dados/: EditalShield_Bloco_Matematico_Formalizado.tex  EditalShield_Checklist_Execucao.md  EditalShield_DB_Dados_Sinteticos.md  EditalShield_Roadmap_Executivo.md  EditalShield_Scraper_Reais.md  EditalShield_Setup_Automatizado.md  EditalShield_Treinamento_Modelo.md
data/: editais_reais.json  editais_reais_inserts.sql  synthetic_dataset.json  synthetic_inserts.sql
database/: generate_synthetic_data.py  models.py  schema.sql  scraper_editais_reais.py
docs/: EditalShield_Agent_Instructions.md  EditalShield_Complete_Spec.md  EditalShield_Gap_Analysis_v1.md  EditalShield_Whitepaper_Executivo.md  EditalShield_Whitepaper_Tech.tex  INDEX.md  MATHEMATICAL_MODEL.tex  README.md  ROADMAP.md  SPRINT_1_CHECKLIST.md  STRATEGY.md  SYSTEM_CONTEXT.md  architecture.md  editalshield_gap_coverage_analysis.json
docs/images/: IMAGE_GUIDE.md
docsync/: INTEGRATION.md  README.md  setup.py
docsync/src/docsync/: cli.py  config.py  (+2 more)
examples/: README.md
models/: bayesian_model_20251204_191927.pkl  train_bayesian_model.py  validation_report_20251204_191927.json
notebooks/: README.md
src/editalshield/: __init__.py  cli.py  config.py  docs_manager.py
tests/: __init__.py  test_core.py
(+10 files in other folders)
