[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "editalshield"
version = "0.2.0"
description = "Framework sistemático para proteção de PI em editais de inovação brasileiros"
authors = [{name = "John Doe", email = "contact@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["editais", "inovacao", "propriedade-intelectual", "startups", "brasil"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business",
]

dependencies = [
    "click>=8.1",
    "jinja2>=3.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.28",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.scripts]
editalshield = "editalshield.cli:cli"

[project.urls]
Homepage = "https://github.com/SH1W4/editalshield"
Documentation = "https://github.com/SH1W4/editalshield/tree/main/docs"
Repository = "https://github.com/SH1W4/editalshield"
Issues = "https://github.com/SH1W4/editalshield/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/editalshield --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
